--- a/src/main/webapp/shipment_management/window_cornell_report.zul
+++ b/src/main/webapp/shipment_management/window_cornell_report.zul
@@ -82,13 +82,32 @@ use="com.cimmyt.zk.shipments.ControlWindowCornell" onCreate="idCornellAdd.loadCo
 		</rows>
 	</grid>
 
-	<fisheyebar id="idFsb" attachEdge="top"
-	 itemWidth="50" itemHeight="50" itemMaxHeight="60" itemMaxWidth="60">
-	    <fisheye label="${lblMenTAdd}" id="idFisheyeCSV"
-	        image="${imgOk}" onClick="idCornellAdd.nextPag()" visible="true"/>
-	    <fisheye label="${lblMenTCancel}" 
-	    image="${imgCancel}" onClick="idCornellAdd.closeWindow()"/>
-	</fisheyebar>
+	<div align="center" width="500px" >
+	<hbox>
+		<image  id="idAdd" tooltiptext="${lblMenTAdd}" src="${imgOk}" onClick="idCornellAdd.nextPag()"
+					width="40px" height="40px" visible="true">
+						<attribute name="onMouseOver">
+							idAdd.setWidth("60px");
+							idAdd.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idAdd.setWidth("40px");
+							idAdd.setHeight("40px");
+						</attribute>
+		</image>
+		<image  id="idClose" tooltiptext="${lblMenTCancel}" src="${imgCancel}" onClick="idCornellAdd.closeWindow()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							idClose.setWidth("60px");
+							idClose.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idClose.setWidth("40px");
+							idClose.setHeight("40px");
+						</attribute>
+		</image>
+	</hbox>
+	</div>
 	</vbox>
 </window>
 </zk>
