--- a/src/main/webapp/investigators/window_functions.zul
+++ b/src/main/webapp/investigators/window_functions.zul
@@ -374,15 +374,31 @@ use="com.cimmyt.zk.investigator.ControlFuntionsUser" onCreate="idWindowFuntions.
 		</treechildren>
 	</tree>
 	
-	<box> 
-	<fisheyebar id="idFsb" style="position:absolute; margin:15px 150px;" attachEdge="top"
-	 itemWidth="50" itemHeight="50" itemMaxHeight="60" itemMaxWidth="60">
-	    <fisheye label="${lblMenTAdd}" 
-	        image="${imgOk}" onClick="idWindowFuntions.add()"/>
-	    <fisheye label="${lblMenTCancel}" 
-	    image="${imgClose}" onClick="idWindowFuntions.cancel()"/>
-	</fisheyebar>
-	
-	</box>
+	<div align="center" width="400px" >
+	<hbox>
+		<image  id="idAdd" tooltiptext="${lblMenTAdd}" src="${imgOk}" onClick="idWindowFuntions.add()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							idAdd.setWidth("60px");
+							idAdd.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idAdd.setWidth("40px");
+							idAdd.setHeight("40px");
+						</attribute>
+		</image>
+		<image  id="idClose" tooltiptext="${lblMenTCancel}" src="${imgClose}" onClick="idWindowFuntions.cancel()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							idClose.setWidth("60px");
+							idClose.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idClose.setWidth("40px");
+							idClose.setHeight("40px");
+						</attribute>
+		</image>
+	</hbox>
+	</div>
 </window>
 </zk>
