--- a/src/main/webapp/register/reset_password.zul
+++ b/src/main/webapp/register/reset_password.zul
@@ -25,10 +25,32 @@ id="idWindow" use="com.cimmyt.zk.register.ControlResetPassword">
 	  	</row>
 	  </rows>
 	</grid>
-	<fisheyebar  style="margin:5px 120px;" attachEdge="top"
-	        				itemWidth="50" itemHeight="50" itemMaxHeight="60" itemMaxWidth="60">
-	      <fisheye id="idLabFis"  onClick="idWindow.add()" image="${imgNext}"/>
-	      <fisheye label="${lblMenTCancel}" image="${imgClose}" onClick="idWindow.closeWindow()"/>
-	</fisheyebar>
+
+	<div align="center" width="400px" >
+	<hbox>
+		<image  id="idAdd" tooltiptext="${lblMenTAdd}" src="${imgOk}" onClick="idWindow.add()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							idAdd.setWidth("60px");
+							idAdd.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idAdd.setWidth("40px");
+							idAdd.setHeight("40px");
+						</attribute>
+		</image>
+		<image  id="idClose" tooltiptext="${lblMenTCancel}" src="${imgClose}" onClick="idWindow.closeWindow()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							idClose.setWidth("60px");
+							idClose.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idClose.setWidth("40px");
+							idClose.setHeight("40px");
+						</attribute>
+		</image>
+	</hbox>
+	</div>
 </window>
 </zk>
